feat: Paint Canvas - Implemented full paint canvas - Added a logo for the application